--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.1"
+    "sequelize": "^6.5.1",
+    "sequelize-cli": "^6.2.0"
   }
 }
