--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,10 @@
   },
   "production": {
     "username": "yanghyeonseo",
-    "password": null,
+    "password": "password",
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "use_env_variable": "DATABASE_URL"
   }
 }
