--- a/config/config.json
+++ b/config/config.json
@@ -19,6 +19,9 @@
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": true
+    },
     "use_env_variable": "DATABASE_URL"
   }
 }
