--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,8 @@
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialectOptions": {
-      "ssl": true
+      "ssl": true,
+      "rejectUnauthorized": false
     }
   }
 }
