--- a/config/config.json
+++ b/config/config.json
@@ -16,8 +16,9 @@
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialectOptions": {
-      "ssl": true,
-      "rejectUnauthorized": false
+      "ssl": {
+        "rejectUnauthorized": false
+      }
     }
   }
 }
