--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.1",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
